# ac_performance

./: .flaskenv  .pre-commit-config.yaml  LICENSE  README.md  config.py  pyproject.toml
.github/workflows/: python-app.yml
app/: __init__.py
app/errors/: __init__.py
app/main/: __init__.py  routes.py
app/performance/: calcs.py
app/templates/: base.html  index.html
app/templates/errors/: 404.html  500.html
tests/: test_airspeed_cal.py  test_app.py
