[tool.poetry]
name = "ac-performance"
version = "0.1.0"
description = ""
authors = ["Ian Dolge <110300455+iandolge@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ac_performance"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
pydantic = "^1.10.7"
numpy = "^1.24.2"
hypothesis = "^6.70.0"
python-dotenv = "^1.0.0"
flask-bootstrap = "^3.3.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pre-commit = "^3.2.0"
black = "^23.1.0"
mypy = "^1.1.1"
ruff = "^0.0.259"
djlint = "^1.19.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
